Cascade_Git_Test2/src/objects/Apple_Orchards__c.object
<CustomObject>
    <fields>
        <fullName>Apple_Type__c</fullName>
        <label>Apple Type</label>
        <picklist>
            <picklistValues>
                <fullName>Macintosh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granny Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Delicious</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farmer_Email__c</fullName>
        <label>Farmer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Global_Test_Two__c</fullName>
        <description>Testing this global picklist on a second custom object</description>
        <globalPicklist>Global_Test</globalPicklist>
        <label>Global Test Two</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pick_By_Date__c</fullName>
        <label>Pick By Date</label>
        <type>Date</type>
    </fields>
    <label>Apple Orchards</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Apple Orchards Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apple Orchards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>